[project]
name = "ai-storyteller"
version = "1.0.0"
description = "AI-Powered Kids Storyteller with Multi-Engine Voice Narration"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["ai", "storytelling", "voice-synthesis", "education", "children", "claude", "mcp"]

dependencies = [
    # Core Dependencies
    "python-dotenv>=1.0.0",
    
    # AI and Claude Integration
    "anthropic>=0.25.0",
    
    # Voice Synthesis Engines
    "pyttsx3>=2.90",
    "gTTS>=2.4.0",
    "edge-tts>=6.1.9",
    
    # Audio Processing and Playback
    "pygame>=2.5.2",
    "pydub>=0.25.1",
    
    # Web and Network
    "aiohttp>=3.9.1",
    "requests>=2.31.0",
    
    # Data Processing
    "numpy>=1.24.3",
    
    # UI and Logging
    "colorama>=0.4.6",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.2",
    "black>=23.12.1",
    "ruff>=0.1.9",
    "mypy>=1.8.0",
]

audio-extra = [
    "simpleaudio>=1.0.4",
    "pyaudio>=0.2.11",
]

windows = [
    "pywin32>=306",
]

macos = [
    "pyobjc>=10.1",
]

[project.urls]
Homepage = "https://github.com/yourusername/ai-storyteller"
Repository = "https://github.com/yourusername/ai-storyteller"
Issues = "https://github.com/yourusername/ai-storyteller/issues"

[project.scripts]
storyteller = "voice_storyteller_client:main"
storyteller-server = "voice_storyteller_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
